ingress-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: myapp.com
      http:
        paths:
        - path: /analytics
          backend:
            serviceName: myapp-internal-service
            servicePort: 8080
        - path: /shopping
          backend:
            serviceName: myapp-internal-service2
            servicePort: 8181

    - host: myapp.com
      http:
        paths:
          - path: /analytics
            backend:
              serviceName: myapp-internal-service
              servicePort: 8080
          - path: /shopping
            backend:
              serviceName: myapp-internal-service2
              servicePort: 8181
